<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical">

    <CheckBox
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:checked="true"
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/checkbox" />

    <TextView
        android:id="@+id/text"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:padding="7dp"
        android:layout_weight="1"
        android:textSize="16sp" />
</LinearLayout>